// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callback events 1`] = `
<div class="van-popup van-popup--bottom van-action-sheet" name="van-popup-slide-bottom">
  <div class="van-action-sheet__item van-hairline--top"><span class="van-action-sheet__name">Option</span></div>
  <div class="van-action-sheet__item van-action-sheet__item--disabled van-hairline--top"><span class="van-action-sheet__name">Option</span></div>
  <div class="van-action-sheet__item van-action-sheet__item--disabled van-hairline--top">
    <div class="van-loading van-loading--circular"><span class="van-loading__spinner van-loading__spinner--circular" style="color: rgb(201, 201, 201); width: 20px; height: 20px;"><svg viewBox="25 25 50 50" class="van-loading__circular"><circle cx="50" cy="50" r="20" fill="none"></circle></svg></span></div>
  </div>
  <div class="van-action-sheet__item van-hairline--top"><span class="van-action-sheet__name">Option</span><span class="van-action-sheet__subname">Subname</span></div>
  <div class="van-action-sheet__cancel">Cancel</div>
</div>
`;

exports[`disable lazy-render 1`] = `
<div class="van-popup van-popup--bottom van-action-sheet" style="display: none;" name="van-popup-slide-bottom">
  <div class="van-action-sheet__item van-hairline--top"><span class="van-action-sheet__name">Option</span></div>
  <div class="van-action-sheet__item van-hairline--top"><span class="van-action-sheet__name">Option</span></div>
  <div class="van-action-sheet__cancel">Cancel</div>
</div>
`;

exports[`render title and default slot 1`] = ``;
